[workspace]
members = ["crates/*", "cmds/*"]
resolver = "2"
package.version = "0.1.0"
package.edition = "2024"
package.rust-version = "1.86.0"

[workspace.dependencies]
better-command = { path = "./crates/better-command" }
fleet-shared = { path = "./crates/fleet-shared" }
nix-eval = { path = "./crates/nix-eval" }
nixlike = { path = "./crates/nixlike" }

age = { version = "0.11", features = ["plugin", "ssh"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"
nix = { version = "0.30.1", features = ["fs", "user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
