[workspace]
members = ["crates/*", "cmds/*"]
resolver = "2"
package.version = "0.1.0"
package.edition = "2024"
package.rust-version = "1.89.0"

[workspace.dependencies]
better-command = { path = "./crates/better-command" }
fleet-base = { path = "./crates/fleet-base" }
fleet-shared = { path = "./crates/fleet-shared" }
nix-eval = { path = "./crates/nix-eval" }
nixlike = { path = "./crates/nixlike" }

abort-on-drop = "0.2"
age = { version = "0.11", features = ["plugin", "ssh"] }
age-core = "0.11"
anyhow = "1.0"
async-trait = "0.1.88"
axum = { version = "0.8.7", features = ["http2", "macros", "ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
base64 = "0.22.1"
bindgen = "0.72.0"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.5"
cxx = "1.0.168"
cxx-build = "1.0.168"
ed25519-dalek = "2.1"
futures = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
hostname = "0.4.1"
human-repr = "1.1"
hyper = "1.8.1"
indicatif = "0.18"
indoc = "2.0.6"
itertools = "0.14.0"
linked-hash-map = "0.5.6"
nix = { version = "0.31.2", features = ["fs", "user"] }
nom = "8.0.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "gzip-tonic", "http-json"] }
opentelemetry_sdk = "0.31.0"
openssh = "0.11.5"
peg = "0.8.5"
pkg-config = "0.3.30"
rand = "0.10.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde-transcode = "1.1.1"
serde_json = "1.0"
shlex = "1.3"
tabled = "0.20.0"
tempfile = "3.20"
test-log = { version = "0.2.19", features = ["trace"] }
tf-provider = "0.2.2"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7.17"
toml_edit = "0.23.10"
tracing = "0.1"
tracing-indicatif = "0.3.13"
tracing-opentelemetry = "0.32.1"
# For fixed coloring needs to be updated to https://github.com/tokio-rs/tracing/pull/3484
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
unicode_categories = "0.1.1"
vte = { version = "0.15.0", features = ["ansi"] }
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
