[package]
name = "fleet"
description = "NixOS configuration management"
version = "0.2.0"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition.workspace = true
rust-version.workspace = true
default-run = "fleet"

[dependencies]
age = { workspace = true, features = ["armor"] }
anyhow.workspace = true
better-command.workspace = true
clap.workspace = true
clap_complete.workspace = true
fleet-base.workspace = true
fleet-shared.workspace = true
nix-eval.workspace = true
nixlike.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

abort-on-drop.workspace = true
age-core.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
hostname.workspace = true
itertools.workspace = true
openssh.workspace = true
peg.workspace = true
regex.workspace = true
shlex.workspace = true
tabled.workspace = true
time = { workspace = true, features = ["serde"] }
tokio-util = { workspace = true, features = ["codec"] }

human-repr = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
nom.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
thiserror.workspace = true
tracing-indicatif = { workspace = true, optional = true }
tracing-opentelemetry.workspace = true
opentelemetry-exporter-env.workspace = true
opentelemetry-appender-tracing.workspace = true

[features]
default = ["indicatif"]
# Not quite stable
indicatif = [
	"dep:tracing-indicatif",
	"dep:indicatif",
	"dep:human-repr",
	"better-command/indicatif",
	"nix-eval/indicatif",
]
