[package]
name = "fleet-generator-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
clap.workspace = true
fleet-shared.workspace = true

base64 = "0.22.1"
ed25519-dalek = { version = "2.1" }
hex = "0.4.3"
rand = "0.9.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
