[package]
name = "fleet-generator-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
clap.workspace = true
fleet-shared.workspace = true

base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand.workspace = true
x25519-dalek.workspace = true
