[package]
name = "pusher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
futures-util.workspace = true
hyper.workspace = true
tokio = { workspace = true, features = ["macros", "process", "rt"] }
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
