[package]
name = "better-command"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

tracing-indicatif = { workspace = true, optional = true }

[features]
indicatif = ["tracing-indicatif"]
