[package]
name = "fleet-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
better-command.workspace = true
chrono = "0.4.41"
clap = { workspace = true, features = ["derive"] }
fleet-shared.workspace = true
futures = "0.3.31"
hostname = "0.4.1"
indoc = "2.0.6"
itertools = "0.14.0"
nix-eval.workspace = true
nixlike.workspace = true
nom = "8.0.0"
openssh = "0.11.5"
rand = "0.9.1"
serde.workspace = true
serde_json = "1.0.140"
tabled = "0.20.0"
tempfile.workspace = true
time = { version = "0.3.41", features = ["parsing"] }
tokio.workspace = true
tokio-util = "0.7.15"
tracing.workspace = true
