[package]
name = "fleet-base"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
age.workspace = true
anyhow.workspace = true
better-command.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
fleet-shared.workspace = true
futures.workspace = true
hostname.workspace = true
indoc.workspace = true
itertools.workspace = true
nix-eval.workspace = true
nixlike.workspace = true
nom.workspace = true
openssh.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time = { workspace = true, features = ["parsing"] }
tokio.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
toml_edit.workspace = true
tracing.workspace = true
