[package]
name = "nix-eval"
version.workspace = true
build = "build.rs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
nixlike.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

cxx = "1.0.168"
itertools = "0.14.0"
test-log = { version = "0.2.18", features = ["trace"] }
tracing-indicatif = { version = "0.3.13", optional = true }
vte = { version = "0.15.0", features = ["ansi"] }

[build-dependencies]
bindgen = "0.72.0"
cxx-build = "1.0.168"
pkg-config = "0.3.30"

[features]
indicatif = ["dep:tracing-indicatif"]
