[package]
name = "nix-eval"
version.workspace = true
build = "build.rs"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
nixlike.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

cxx.workspace = true
itertools.workspace = true
test-log.workspace = true
tokio.workspace = true
tracing-indicatif = { workspace = true, optional = true }
vte.workspace = true

[build-dependencies]
bindgen.workspace = true
cxx-build.workspace = true
pkg-config.workspace = true

[features]
indicatif = ["dep:tracing-indicatif"]
