[package]
name = "nixlike"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

itertools.workspace = true
linked-hash-map.workspace = true
peg.workspace = true
serde.workspace = true
serde-transcode.workspace = true
serde_json.workspace = true
